style: stop images breaking out of container

--- a/_includes/style.scss
+++ b/_includes/style.scss
@@ -193,6 +193,8 @@ img {
     display: block;
     margin: 0 0 1rem;
     border-radius: 5px;
+    max-width: 100%;
+    height: auto;
 }
 
 /* Tables */
